# Generated Cmake Pico project file

cmake_minimum_required(VERSION 3.13)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(PICO_BOARD pico_w CACHE STRING "Board type")

# Pull in Raspberry Pi Pico SDK (must be before project)
include(pico_sdk_import.cmake)

# Altere o caminho em que se encontra o kernel do freeRtos Aqui
set(FREERTOS_KERNEL_PATH "C:/FreeRTOS-Kernel")
include(${FREERTOS_KERNEL_PATH}/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)

project(PainelControleInterativoComAcessoConcorrente C CXX ASM)

# Initialise the Raspberry Pi Pico SDK
pico_sdk_init()


include_directories(${CMAKE_SOURCE_DIR}/lib)

# Add executable. Default name is the project name, version 0.1

add_executable(PainelControleInterativoComAcessoConcorrente PainelControleInterativoComAcessoConcorrente.c lib/ssd1306.c)

pico_set_program_name(PainelControleInterativoComAcessoConcorrente "PainelControleInterativoComAcessoConcorrente")
pico_set_program_version(PainelControleInterativoComAcessoConcorrente "0.1")

# Modify the below lines to enable/disable output over UART/USB
pico_enable_stdio_uart(PainelControleInterativoComAcessoConcorrente 0)
pico_enable_stdio_usb(PainelControleInterativoComAcessoConcorrente 1)

# Generate PIO header
pico_generate_pio_header(PainelControleInterativoComAcessoConcorrente ${CMAKE_CURRENT_LIST_DIR}/lib/ws2812.pio)


# Add the standard library to the build
target_link_libraries(PainelControleInterativoComAcessoConcorrente
        hardware_pwm
        hardware_i2c
        hardware_pio
        FreeRTOS-Kernel 
        FreeRTOS-Kernel-Heap4
        hardware_gpio
        pico_stdlib)

# Add the standard include files to the build
target_include_directories(PainelControleInterativoComAcessoConcorrente PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
)


pico_add_extra_outputs(PainelControleInterativoComAcessoConcorrente)

